# opengl

setup/: CMakeLists.txt  README.md
setup/src/: main.cpp
